[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Quiz/Quiz.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/BoardSetup/BoardSetup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/Level.gd" type="Script" id=3]
[ext_resource path="res://GameObjects/SpecialTiles/PortalTile/PortalTile.tscn" type="PackedScene" id=4]

[node name="Level3" type="Node"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -160, -120 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="BoardSetup" parent="." instance=ExtResource( 2 )]

[node name="BoardBackground" parent="BoardSetup" index="0"]
tile_data = PoolIntArray( -589839, 0, 131072, -589838, 0, 131073, -589837, 0, 131072, -589836, 0, 131073, -589835, 0, 131072, -589833, 0, 131072, -524303, 0, 131073, -524302, 0, 131072, -524301, 0, 131073, -524300, 0, 131072, -524299, 0, 131073, -524297, 0, 131073, -458769, 0, 131072, -458768, 0, 131073, -458767, 0, 131072, -458766, 0, 131073, -458765, 0, 131072, -458764, 0, 131073, -458763, 0, 131072, -458762, 0, 131073, -458761, 0, 131072, -458760, 0, 131073, -393231, 0, 131073, -393230, 0, 131072, -393229, 0, 131073, -393228, 0, 131072, -393227, 0, 131073, -393225, 0, 131073, -327695, 0, 131072, -327694, 0, 131073, -327693, 0, 131072, -327692, 0, 131073, -327691, 0, 131072, -327689, 0, 131072 )

[node name="BoardBorder" parent="BoardSetup" index="1"]
tile_data = PoolIntArray( -1310751, 0, 0, -1310750, 0, 1, -1310749, 0, 131076, -1310748, 0, 1, -1310747, 0, 131076, -1310746, 0, 1, -1310745, 0, 131076, -1310744, 0, 131076, -1310743, 0, 131076, -1310742, 0, 1, -1310741, 0, 131076, -1310740, 0, 131076, -1310739, 0, 131076, -1310738, 0, 1, -1310737, 0, 131076, -1310736, 0, 2, -1245215, 0, 65541, -1245214, 0, 65537, -1245213, 0, 65537, -1245212, 0, 65537, -1245211, 0, 65537, -1245210, 0, 65537, -1245209, 0, 65537, -1245208, 0, 65537, -1245207, 0, 65537, -1245206, 0, 65537, -1245205, 0, 65537, -1245204, 0, 65537, -1245203, 0, 65537, -1245202, 0, 65537, -1245201, 0, 65537, -1245200, 0, 65538, -1179679, 0, 65541, -1179678, 0, 65537, -1179677, 0, 65537, -1179676, 0, 65537, -1179675, 0, 65537, -1179674, 0, 65537, -1179673, 0, 65537, -1179672, 0, 65537, -1179671, 0, 65537, -1179670, 0, 65537, -1179669, 0, 65537, -1179668, 0, 65537, -1179667, 0, 65537, -1179666, 0, 65537, -1179665, 0, 65537, -1179664, 0, 65538, -1114143, 0, 65541, -1114142, 0, 65537, -1114141, 0, 65537, -1114140, 0, 65537, -1114139, 0, 65537, -1114138, 0, 65537, -1114137, 0, 65537, -1114136, 0, 65537, -1114135, 0, 65537, -1114134, 0, 65537, -1114133, 0, 65537, -1114132, 0, 65537, -1114131, 0, 65537, -1114130, 0, 65537, -1114129, 0, 65537, -1114128, 0, 65538, -1048611, 0, 0, -1048610, 0, 1, -1048609, 0, 1, -1048608, 0, 131076, -1048607, 0, 131077, -1048606, 0, 65537, -1048605, 0, 65537, -1048604, 0, 65537, -1048603, 0, 65537, -1048602, 0, 65537, -1048601, 0, 65537, -1048600, 0, 65537, -1048599, 0, 65537, -1048598, 0, 65537, -1048597, 0, 65537, -1048596, 0, 65537, -1048595, 0, 65537, -1048594, 0, 65537, -1048593, 0, 65537, -1048592, 0, 131075, -1048591, 0, 1, -1048590, 0, 2, -983075, 0, 65536, -983074, 0, 65537, -983073, 0, 65537, -983072, 0, 65537, -983071, 0, 65537, -983070, 0, 65537, -983069, 0, 65537, -983068, 0, 65537, -983067, 0, 65537, -983066, 0, 65537, -983065, 0, 65537, -983064, 0, 65537, -983063, 0, 65537, -983062, 0, 65537, -983061, 0, 65537, -983060, 0, 65537, -983059, 0, 65537, -983058, 0, 65537, -983057, 0, 65537, -983056, 0, 65537, -983055, 0, 65537, -983054, 0, 65538, -917539, 0, 65536, -917538, 0, 65537, -917537, 0, 65537, -917536, 0, 65537, -917535, 0, 65537, -917534, 0, 65537, -917533, 0, 65537, -917532, 0, 65537, -917531, 0, 65537, -917530, 0, 65537, -917529, 0, 65537, -917528, 0, 65537, -917527, 0, 65537, -917526, 0, 65537, -917525, 0, 65537, -917524, 0, 65537, -917523, 0, 65537, -917522, 0, 65537, -917521, 0, 65537, -917520, 0, 65537, -917519, 0, 65537, -917518, 0, 65539, -852003, 0, 131072, -852002, 0, 4, -852001, 0, 4, -852000, 0, 131073, -851999, 0, 5, -851998, 0, 65537, -851997, 0, 65537, -851996, 0, 65537, -851995, 0, 65537, -851994, 0, 65537, -851993, 0, 65537, -851992, 0, 65537, -851991, 0, 65537, -851990, 0, 65537, -851989, 0, 65537, -851988, 0, 65537, -851987, 0, 65537, -851986, 0, 65537, -851985, 0, 65537, -851984, 0, 3, -851983, 0, 4, -851982, 0, 131074, -786463, 0, 65541, -786462, 0, 65537, -786461, 0, 65537, -786460, 0, 65537, -786459, 0, 65537, -786458, 0, 65537, -786457, 0, 65537, -786456, 0, 65537, -786455, 0, 65537, -786454, 0, 65537, -786453, 0, 65537, -786452, 0, 65537, -786451, 0, 65537, -786450, 0, 65537, -786449, 0, 65537, -786448, 0, 65538, -720927, 0, 65541, -720926, 0, 65537, -720925, 0, 65537, -720924, 0, 65537, -720923, 0, 65537, -720922, 0, 65537, -720921, 0, 65537, -720920, 0, 65537, -720919, 0, 65537, -720918, 0, 65537, -720917, 0, 65537, -720916, 0, 65537, -720915, 0, 65537, -720914, 0, 65537, -720913, 0, 65537, -720912, 0, 65539, -655391, 0, 65536, -655390, 0, 65537, -655389, 0, 65537, -655388, 0, 65537, -655387, 0, 65537, -655386, 0, 65537, -655385, 0, 65537, -655384, 0, 65537, -655383, 0, 65537, -655382, 0, 65537, -655381, 0, 65537, -655380, 0, 65537, -655379, 0, 65537, -655378, 0, 65537, -655377, 0, 65537, -655376, 0, 65539, -589855, 0, 131072, -589854, 0, 131073, -589853, 0, 131073, -589852, 0, 4, -589851, 0, 4, -589850, 0, 131073, -589849, 0, 4, -589848, 0, 131073, -589847, 0, 131073, -589846, 0, 131073, -589845, 0, 131073, -589844, 0, 131073, -589843, 0, 131073, -589842, 0, 4, -589841, 0, 131073, -589840, 0, 131074 )

[node name="SpecialTiles" parent="BoardSetup" index="2"]
tile_data = PoolIntArray( -524301, 1, 0, -458761, 6, 0, -458760, 4, 0, -327693, 0, 0 )

[node name="PortalTile" parent="BoardSetup/SpecialTiles" index="0" instance=ExtResource( 4 )]
position = Vector2( -136, -152 )

[node name="PortalTile2" parent="BoardSetup/SpecialTiles" index="1" instance=ExtResource( 4 )]
position = Vector2( -168, -88 )

[node name="InteractableObjects" parent="BoardSetup" index="3"]
tile_data = PoolIntArray( -589835, 2, 0, -589834, 5, 0, -524303, 1, 0, -524298, 5, 0, -458769, 0, 0, -393226, 5, 0, -327695, 2, 0, -327690, 5, 0, -327689, 2, 0 )

[node name="QuizPanel" parent="." instance=ExtResource( 1 )]
visible = false

[editable path="BoardSetup"]
